# treinamento-etl-arquitetura-medalhao

./: .env.example  .gitignore  LICENSE  README.md  pipeline.py  pyproject.toml  requirements.txt
data/bronze/schiphol/destinations/dt_ingest=2026-07-17/run_id=20260717_150148/: parte_0.parquet
data/bronze/schiphol/flights/dt_ingest=2026-07-17/run_id=20260717_150148/: parte_0.parquet
data/dbt_target/: graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
data/dbt_target/compiled/schiphol_pipeline/models/gold/: dim_destinations.sql  fct_flights.sql
data/dbt_target/compiled/schiphol_pipeline/models/gold/schema.yml/: accepted_values_fct_flights_flight_direction__A__D.sql  not_null_dim_destinations_country.sql  not_null_dim_destinations_destination_iata.sql  not_null_dim_destinations_destination_sk.sql  not_null_fct_flights_flight_direction.sql  not_null_fct_flights_flight_id.sql  (+7 more)
data/dbt_target/compiled/schiphol_pipeline/models/silver/: silver_destinations.sql  silver_flights.sql
data/dbt_target/run/schiphol_pipeline/models/gold/: dim_destinations.sql  fct_flights.sql
data/dbt_target/run/schiphol_pipeline/models/silver/: silver_destinations.sql  silver_flights.sql
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/gold/: dim_destinations.sql  fct_flights.sql  schema.yml
dbt_project/models/silver/: schema.yml  silver_destinations.sql  silver_flights.sql
schiphol_project/: dbt_project.yml
scripts/: bronze_loader.py  extract.py
tests/: test_duckdb.py
(+27 files in other folders)
