[project]
name = "citi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core==1.8.3",
    "dbt-duckdb==1.8.4",
    "duckdb==1.1.0",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]
